DT-1905: ⬆️  Upgrade to java 16 and kotlin 1.5 (#424)
* DT-1905: ⬆️  Upgrade to java 16 and kotlin 1.5

* DT-1905: 🐛 Fix ldap being unable to connect due to upgrade